--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             animation: {
               'fade-in': 'fadeIn 1s ease-out forwards',
               'slide-up': 'slideUp 0.8s ease-out forwards',
+              'scroll': 'scroll 20s linear infinite',
             },
             keyframes: {
               fadeIn: {
@@ -34,6 +35,10 @@
               slideUp: {
                 '0%': { transform: 'translateY(20px)', opacity: '0' },
                 '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+              scroll: {
+                '0%': { transform: 'translateX(0)' },
+                '100%': { transform: 'translateX(-50%)' },
               }
             }
           },
@@ -72,7 +77,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
